# ecommerce-api

./: .env.example  Cargo.toml  diesel.toml
migrations/2023-07-29-021648_init/: up.sql
migrations/2023-08-06-153547_product_variant_constraint/: up.sql
src/: constants.rs  db.rs  error.rs  main.rs  models.rs  schema.rs
src/api/: address_controllers.rs  auth.rs  auth_controllers.rs  mod.rs  ping_controller.rs
src/config/: app.rs  db.rs  routes.rs
src/controllers/: address.rs  auth.rs  mod.rs  product.rs  shopping_cart.rs  store.rs
src/db/: address.rs  mod.rs  order_item.rs  product.rs  product_item.rs  shopping_cart.rs  store.rs  store_invite.rs  user.rs
src/middleware/: auth.rs
src/models/: address.rs  db_models.rs  mod.rs  order.rs  payment_method.rs  product.rs  response.rs  shipping.rs  shipping_method.rs  shopping_cart.rs  store.rs  store_invite.rs  user.rs
src/utils/: auth.rs  jwt_auth.rs  mod.rs  password_hash.rs  validation.rs
