[package]
name = "ecommerce-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = [ "v4"] }
serde = {version = "^1", features = ["derive"]}
serde_json = "1"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
log = "0.4.19"
env_logger = "0.10.0"
strum = {version = "0.25.0", features = ["derive"]}
strum_macros = "0.25.1"
listenfd = "0.3"
chrono = "0.4.26"
dotenv = "0.15.0"
bigdecimal = "0.4.1"
