[package]
name = "ecommerce-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "2.1.0"
log = "0.4.19"
regex = "1.5.6"
env_logger = "0.10.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.1"
listenfd = "0.3"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
bigdecimal = "0.4.1"
derive_more = "0.99.17"
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
hmac = "0.12.1"
rand = "0.8.5"
sha2 = "0.10.7"
hex = "0.4.3"
jsonwebtoken = "8.3.0"
